Bug 44078 - [he] UI is displayed with squares instead of translation due to bad font selection
Summary: [he] UI is displayed with squares instead of translation due to bad font sele...
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
3.4.4 release
Hardware: Other All
: high major
Assignee: Caolán McNamara
URL:
Whiteboard:
Keywords:
: 44492 (view as bug list)
Depends on:
Blocks: mab3.5
  Show dependency treegraph
 
Reported: 2011-12-22 14:08 UTC by Lior Kaplan
Modified: 2024-08-03 09:15 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
help->about with squares (34.65 KB, image/png)
2011-12-22 14:08 UTC, Lior Kaplan
Details
writer with squares for UI (52.13 KB, image/png)
2011-12-22 14:09 UTC, Lior Kaplan
Details
output of fc-list -v (27.94 KB, application/x-gzip)
2011-12-22 14:10 UTC, Lior Kaplan
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Lior Kaplan 2011-12-22 14:08:38 UTC
Created attachment 54718 [details]
help->about with squares

Hi,

In some cases LibO selects fonts to render the UI (regardless of the UI system fonts) with a font that doesn't support the relevant language. For Hebrew this is DejaVuSans-ExtraLight, which causes the UI to show squares instead of the Hebrew translation.

Is there a way for LibO to avoid this font for the Hebrew UI? (although I'm sure it affects more languages as this font is indeed "extra light" regarding languages support).

In recent 3.5.0 beta2, this font is included (with many others) in the lodevbasis3.5-ooofonts packages, which makes the above problem by "inherent" to all LibO builds. Changed the severity of this issue accordingly.

Beta2 changed the previous behavior, as it uses the fonts from the internal font package and seems to ignore the system font for the UI itself.

The only work around is to removed the DejaVuSans-ExtraLight font from the system (3.4.4 and 3.5.0 beta1) or from the LibO installation dir (3.5.0 beta2).
Comment 1 Lior Kaplan 2011-12-22 14:09:10 UTC
Created attachment 54719 [details]
writer with squares for UI
Comment 2 Lior Kaplan 2011-12-22 14:10:06 UTC
Created attachment 54720 [details]
output of fc-list -v
Comment 3 Lior Kaplan 2011-12-24 13:37:55 UTC
When in RTL UI the problematic font is also used as the default font for Hebrew (if culmus fonts aren't installed), meaning the text you enter also look as squares and gives impression that the software is totally broken. 

For LTR interface the default Hebrew font is DejaVu Sans (no culmus fonts installed) or Nachlieli when the culmus fonts are installed (which is fine).
Comment 4 Caolán McNamara 2012-01-04 12:34:39 UTC
the hard bit with these is reproducing it, it depends so much on the fonts installed what falls back to what
Comment 5 Lior Kaplan 2012-01-05 03:52:53 UTC
I know, but this is more of an issue of not selecting fonts which don't include support. DejaVuSans have many fonts to choose from, not need to select the only one without Hebrew support.
Comment 6 Caolán McNamara 2012-01-05 04:20:50 UTC
it just doesn't work like that
Comment 7 Caolán McNamara 2012-01-05 05:51:15 UTC
Tried matching my fonts as closely as possible with the output of fc-list, but can't reproduce this locally. What's the desktop environment, gnome2, gnome3 or something else ? What's the desktop default font set to ? just "Sans" or something specific ?
Comment 8 Caolán McNamara 2012-01-09 06:55:43 UTC
This has got to be basically be the same as bug #44078 which I can reproduce, and understand the problem behind.
Comment 9 Caolán McNamara 2012-01-09 07:09:13 UTC
bah, bug 44492 I mean
Comment 10 Lior Kaplan 2012-01-09 07:14:09 UTC
I'm not sure they are the same, as we talk about UI font instead of document content font. The code might be close, but is in use in different parts of the software.
Comment 11 Caolán McNamara 2012-01-11 09:07:33 UTC
*** Bug 44492 has been marked as a duplicate of this bug. ***
Comment 12 Caolán McNamara 2012-01-11 09:08:09 UTC
I'm fairly confident they're the same thing.
Comment 14 Lior Kaplan 2012-01-11 13:05:11 UTC
Thanks (:

Will try to test on daily builds, as this won't be included in beta3.
Comment 15 Caolán McNamara 2012-01-11 13:09:33 UTC
suggested for cherry-picking to 3-4 series
Comment 16 Lior Kaplan 2012-01-22 04:35:57 UTC
Verified with 3.5.0 RC1.

Any news about the 3.4 branch ?