Resolves:fdo#44078 fix unfortunate name alias mixups with DejaVu fonts